Added exercises classes, to display little questions/tips to trainees. Added some informations about properties

--- a/trainingapp/styles/main.css
+++ b/trainingapp/styles/main.css
@@ -155,6 +155,10 @@ slide-move-right > button:after {
 
 /* ----------------------------- SLIDE CONTAINER CONTENT -------------------------- */
 
+.slide-container li, .slide-container p{
+  max-width: 70%;
+}
+
 .slide-container li {
   margin-left: 1em;
 }
@@ -224,3 +228,22 @@ ul.horizontal-line > li{
 .todo::before{
   content: "TODO: ";
 }
+
+.exercise{
+  display: inline-block;
+  color: blue;
+  margin: 1em;
+  padding: 1em;
+  background-color: #EEE;
+  border-radius: 1em;
+  font-size: smaller;
+}
+
+.exercise::before {
+  content: "Deep Learning ...";
+  font-weight: bolder;
+}
+
+
+
+
