more about templates

--- a/trainingapp/src/components/slides/mainConcepts/aboutTemplates4/aboutTemplates4.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutTemplates4/aboutTemplates4.html
@@ -1,6 +1,6 @@
 <h2 class="standard-title">
 	<span class="title-category">Main Concepts</span>
-	About Templates - Property Binding
+	About Templates - Property Binding - the basics
 </h2>
 
 <p>
