--- a/trainingapp/src/components/slides/mainConcepts/aboutTemplates7/aboutTemplates7.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutTemplates7/aboutTemplates7.html
@@ -1,19 +1,18 @@
 <h2 class="standard-title">
 	<span class="title-category">Main Concepts</span>
-	About Templates - Property Binding - the basics
+	About Templates - Property Binding - About Expansions
 </h2>
 
 <ul>
     <li>
-        Brackets are there to solve previous issues
+        Expansions are done with the <em ngNonBindable>{{expression}}</em> 
     </li>
     <li>
-        These are not regular attributes, so they can have
-        a custom behavior without breaking <em>HTML5</em>
-        specs
+        They allow to evaluate <em>Angular2</em> expressions
     </li>
     <li>
-        The value associated is evaluated as an expression
+        They are a shortcut for <em>property bindings</em> on the
+        <em>textContent</em> property
     </li>
 </ul>
 
@@ -27,12 +26,11 @@ import {SubCmp} from './sub-cmp';
 
 @Component({
     selector: 'my-app',
-    template: '&lt;sub-cmp name="john" [friends]="friends" &gt;&lt;/sub-cmp&gt;',
+    template: '&lt;sub-cmp name="john"&gt;&lt;/sub-cmp&gt;',
     directives: [SubCmp]
 })
 export class AppComponent {
     name: string= 'john';
-    friends: string[]= ['bob', 'dylan']; 
 }
 
 
@@ -47,25 +45,14 @@ import {SubCmp} from './sub-cmp';
 @Component({
     selector: 'sub-cmp',
     template: `
-    &lt;h1&gt; Name: {{name}}&lt;/h1&gt;
-
-    &lt;p&gt;Friends: &lt;/p&gt;
-    &lt;ul&gt;
-        &lt;li *ngFor="#friend of friends"&gt;{{friend}}&lt;/li&gt;
-    &lt;/ul&gt;`
+    &lt;h1&gt; Name v1: {{name}}&lt;/h1&gt;
+    &lt;h1 [textContent]="'Name v2: ' + name" &gt; &lt;/h1&gt;
+    `
 })
 export class SubCmp {
     @Input() name: string;
-    @Input() friends: string[];
 }
 
     </editortab>
 </editor>
 
-
-<ul class="exercise">
-    <li>
-        Do we have the same array instance (<em>friends</em>)  
-        <em>AppComponent</em> and <em>SubCmp</em> ?
-    </li>
-</ul>
