--- a/trainingapp/src/components/slides/mainConcepts/aboutTemplates9/aboutTemplates9.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutTemplates9/aboutTemplates9.html
@@ -1,22 +1,28 @@
 <h2 class="standard-title">
 	<span class="title-category">Main Concepts</span>
-	About Templates - Property Binding - the basics
+	About Templates - What about 2 way data binding?
 </h2>
 
-<ul>
-    <li>
-        Brackets are there to solve previous issues
-    </li>
-    <li>
-        These are not regular attributes, so they can have
-        a custom behavior without breaking <em>HTML5</em>
-        specs
-    </li>
-    <li>
-        The value associated is evaluated as an expression
-    </li>
-</ul>
 
+<p>
+    For <em>Angular1</em> poeple, <em>2 way data binding</em>
+    is a usefull feature which allows to bind data from an input.
+    The idea is to update the model value and the view value when 
+    the input value is modified.
+</p>
+
+<p>
+    The following looks does what we need:
+</p>
+<code>
+    Name:
+    &lt;input type="text" [value]="name" (input)="name= $event.target.name" &gt;
+</code>
+
+<p>
+    That's not so difficult, but a shortcut syntax has been defined 
+    with the <em>ngModel</em> directive
+</p>
 
 
 <editor ng2="true" plunker="true" description="Using Parameters" >
@@ -27,12 +33,11 @@ import {SubCmp} from './sub-cmp';
 
 @Component({
     selector: 'my-app',
-    template: '&lt;sub-cmp name="john" [friends]="friends" &gt;&lt;/sub-cmp&gt;',
+    template: '&lt;sub-cmp name="john"&gt;&lt;/sub-cmp&gt;',
     directives: [SubCmp]
 })
 export class AppComponent {
     name: string= 'john';
-    friends: string[]= ['bob', 'dylan']; 
 }
 
 
@@ -48,24 +53,12 @@ import {SubCmp} from './sub-cmp';
     selector: 'sub-cmp',
     template: `
     &lt;h1&gt; Name: {{name}}&lt;/h1&gt;
-
-    &lt;p&gt;Friends: &lt;/p&gt;
-    &lt;ul&gt;
-        &lt;li *ngFor="#friend of friends"&gt;{{friend}}&lt;/li&gt;
-    &lt;/ul&gt;`
+    &lt;input type="text" [(ngModel)]="name" &gt;
+    `
 })
 export class SubCmp {
     @Input() name: string;
-    @Input() friends: string[];
 }
 
     </editortab>
 </editor>
-
-
-<ul class="exercise">
-    <li>
-        Do we have the same array instance (<em>friends</em>)  
-        <em>AppComponent</em> and <em>SubCmp</em> ?
-    </li>
-</ul>
