pipes added, templates completed

--- a/trainingapp/src/components/slides/mainConcepts/moreDI10/moreDI10.html
+++ b/trainingapp/src/components/slides/mainConcepts/moreDI10/moreDI10.html
@@ -29,14 +29,14 @@
     </li>
     <li>
         <code>@Injectable</code> on the service class:
-        <pre>
+        <editortab [alone]="true" fileType="js">
             @Injectable
             class MyService{
                 constructor(dep: MyDepService){ 
                     //...
                 }
             }
-        </pre> 
+        </editortab>
     </li>
 </ul>
 
