--- a/trainingapp/src/components/slides/mainConcepts/moreDI9/moreDI9.html
+++ b/trainingapp/src/components/slides/mainConcepts/moreDI9/moreDI9.html
@@ -15,7 +15,7 @@
     the service  <code>Srv1</code>
 </p>
 
-<pre>
+<editortab title="test.js" fileType="js" [alone]="true">
 var Cmp1 = (function () {
     function Cmp1( srv1 ) {
         // Transpiled methods and attributes are there
@@ -34,4 +34,4 @@ var Cmp1 = (function () {
     ], Cmp1);
     return Cmp1;
 })();
-</pre>
+</editortab>
