more about forms and started routing

--- a/trainingapp/src/components/editor/editor.html
+++ b/trainingapp/src/components/editor/editor.html
@@ -54,6 +54,7 @@
     
     &lt;!-- angular --&gt;
     &lt;script src="https://code.angularjs.org/2.0.0-beta.8/angular2.dev.js"&gt;&lt;/script&gt;
+    &lt;script src="https://code.angularjs.org/2.0.0-beta.8/router.dev.js"&gt;&lt;/script&gt;
 
     &lt;!-- 2. Configure SystemJS --&gt;
     &lt;script&gt;
