More about router config and usage

--- a/trainingapp/src/components/slides/mainConcepts/aboutRouter/aboutRouter.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutRouter/aboutRouter.html
@@ -9,7 +9,7 @@
 	<li>But remember that we are in a <em>Single Page Application</em></li>
 	<li>So the router will take care of this behavior</li>
 	<li>The router has its own API, it's not mandatory to use it</li>
-	<li>And we didin't use it (neither load its scripts) in previous samples</li>
+	<li>And we didin't use it in previous samples</li>
 	<li>
 		It's a little bit the same idea than in <em>Angular1</em> :
 		views are mapped to url
