Change Detection Added

--- a/trainingapp/src/components/slides/advancedConcepts/aboutChangeDetection2/aboutChangeDetection2.html
+++ b/trainingapp/src/components/slides/advancedConcepts/aboutChangeDetection2/aboutChangeDetection2.html
@@ -1,6 +1,6 @@
 <h2 class="standard-title">
 	<span class="title-category">Advanced Concepts</span>
-	Change Detection - Intro - When and Where - When
+	Change Detection - Intro - When and Where
 </h2>
 
 <p>
@@ -15,6 +15,9 @@
 	</li>
 </ul>
 
+<p>
+	When?	
+</p>
 <ul>
 	<li>
 		To know when, we have to wonder which kind of process
