--- a/trainingapp/src/components/slides/advancedConcepts/aboutChangeDetection3/aboutChangeDetection3.html
+++ b/trainingapp/src/components/slides/advancedConcepts/aboutChangeDetection3/aboutChangeDetection3.html
@@ -1,24 +1,41 @@
 <h2 class="standard-title">
 	<span class="title-category">Advanced Concepts</span>
-	Change Detection - Intro - When and Where - When
+	Change Detection - Intro - When and Where
 </h2>
 
 <p>
-	So the question becomes, how is <em>Angular2</em>
-	aware that a callback has been called?
+	Where is a little bit more difficult to answer
 </p>
 <ul>
 	<li>
-		The <em>Anguar</em> team builds the 
-		<em><a href="">Zone</a></em> API 
-	</li>
-	<li>
-		Its role is precisely to intercept events
-		and so <em>Angular2</em> uses it to run 
-		its detection change feature, the idea is (not the true code):
-		<editortab [alone]="true" title="sample-zone.js" fileType="js" >
-this.zone.onTurnDone
-      .subscribe(() => this.zone.run(() => changeDetection());
+		It depends on the strategy used to detect changes, which is parameterizable
+		at the <em>Component</em> level
+		<editortab [alone]="true" title="sample.ts">
+@Component({
+	//...
+	changeDetection: ChangeDetectionStrategy.OnPush
+})
 		</editortab>
 	</li>
+	<li>
+		The different strategies are
+		<ul>
+			<li>
+				<em>CheckAlways</em>: default value, each time it has to check,
+				the whole component tree is checked
+			</li>
+			<li>
+				<em>OnPush</em>: <em>ng2</em> will limit the observations in the tree
+				to components inputs <em>which have changed</em>
+			</li>
+			<li>
+				<em>Detached / CheckOnce / Checked</em>: Used internally
+			</li>
+		</ul>
+	</li>
 </ul>
+
+
+<p>
+	Let's now  have a look at these strategies in details
+</p>
