--- a/trainingapp/src/components/slides/ecosystem/pw1/pw1.html
+++ b/trainingapp/src/components/slides/ecosystem/pw1/pw1.html
@@ -6,14 +6,7 @@
 <ul>
     <li>
         Based on the previous example, create an application from scratch.
-        Run <pre>node server</pre> to launch the server and test it.
-    </li>
-    <li class="todo">
-        Vérifier que ça marche bien, eux mêmes précisent que le projet est jeune...
-    </li>
-    <li>
-        Once you did it manually, try :
-        <a href="https://github.com/angular/angular-cli" target="_blank">the following tool</a>
+        Run <pre>node server</pre> to launch the server and test your app.
     </li>
     
 </ul>
