--- a/trainingapp/styles/main.css
+++ b/trainingapp/styles/main.css
@@ -245,7 +245,7 @@ ul.horizontal-line > li{
 }
 
 .exercise::before {
-  content: "Deep Learning ...";
+  content: "More Details";
   font-weight: bolder;
 }
 
