--- a/trainingapp/src/components/slides/mainConcepts/moreDI9/moreDI9.html
+++ b/trainingapp/src/components/slides/mainConcepts/moreDI9/moreDI9.html
@@ -4,7 +4,7 @@
 </h2>
 
 <p>
-    As we told before, in oorder to inject a service into an other entity
+    As we told before, in order to inject a service into an other entity
     ( component / service / pipe ), <em>Angular2</em> has to know
     which types are required by this entity.  
 </p>
