--- a/trainingapp/src/components/slides/mainConcepts/aboutTemplates3/aboutTemplates3.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutTemplates3/aboutTemplates3.html
@@ -10,6 +10,10 @@
     <li>
         Use <em>next()</em> method on an <em>EventEmitter</em> instance 
     </li>
+    <li>
+      This allows a <em>down to top</em> communication when associated with <em>outputs</em> attribute in the <em>@Component</em> 
+      annotation (or the <em>@Output</em> annotation directly)
+    </li>
 </ul>
 
 <editor plunker="true" ng2="true" description="sample">
