--- a/trainingapp/src/components/slides/mainConcepts/aboutTemplates/aboutTemplates.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutTemplates/aboutTemplates.html
@@ -13,7 +13,7 @@
 </p>
 
 <editor>
-    <editortab title="my-cmp.html" fileType="html">
+    <editortab title="my-cmp.html" fileType="html" ngNonBindable>
 
 &lt;h1&gt; {{ title }} &lt;/h1&gt;
 
